--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
     <mat-icon class="example-icon">verified_user</mat-icon>
   </mat-toolbar-row>
 </mat-toolbar>
-<app-question-detail></app-question-detail>
+<!-- <app-question-detail></app-question-detail> -->
+<app-signin-screen></app-signin-screen>
