--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span>Second Line</span>
+    <span [routerLink]="['/']" >SW0910</span>
     <span class="example-spacer"></span>
-    <mat-icon class="example-icon">verified_user</mat-icon>
+    <mat-icon [routerLink]="['/signin']" class="example-icon">account_circle</mat-icon>
   </mat-toolbar-row>
 </mat-toolbar>
-<!-- <app-question-detail></app-question-detail> -->
-<app-signin-screen></app-signin-screen>
+<router-outlet></router-outlet>
+<!-- https://github.com/RafaMdoH/MEAN -->
