--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,10 @@ body{
   .example-spacer {
     flex: 1 1 auto;
   }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin: 40px auto;
+}
