--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,4 @@
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
-<!-- https://github.com/RafaMdoH/MEAN -->
+<!-- https://github.com/RafaMdoH/MEAN  npm install   -->
