--- a/src/app/auth/signup-screen.component.html
+++ b/src/app/auth/signup-screen.component.html
@@ -29,5 +29,8 @@
         id="password">
     </mat-form-field>
     <button type="submit" mat-raised-button color="accent">Registrarce</button>
-    
+    <p style="text-align: center">
+            ¿Ya tienes un usuario?
+            <a mat-button color="primary" [routerLink]="['/signin']">Iniciar sesión</a>
+        </p>
 </form>
