--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,5 @@
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
-<!-- https://github.com/RafaMdoH/MEAN  
-npm install   -->
+https://github.com/RafaMdoH/MEAN  
+npm install  
